src/objects/Poverty_Likelihood_Chart__c.object
<CustomObject>
    <fields>
        <fullName>Bottom_Half_Below_National_Poverty_Line__c</fullName>
        <description>Bottom Half Below National Poverty Line</description>
        <label>Bottom Half Below National Poverty Line</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_PPI_Score__c</fullName>
        <label>Max PPI Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_PPI_Score__c</fullName>
        <label>Min PPI Score</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Half_Below_National_Poverty_Line__c</fullName>
        <description>Top Half Below National Poverty Line</description>
        <label>Top Half Below National Poverty Line</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Above_National_Poverty_Line__c</fullName>
        <description>Total Above National Poverty Line</description>
        <label>Total Above National Poverty Line</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Below_National_Poverty_Line__c</fullName>
        <description>Total Below National Poverty Line</description>
        <label>Total Below National Poverty Line</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Poverty Likelihood Chart</label>
    <nameField>
        <label>Poverty Likelihood Chart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poverty Likelihood Chart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_National_Poverty_Line_check</fullName>
        <active>true</active>
        <description>Total_National_Poverty_Line_check</description>
        <errorConditionFormula>Total_Above_National_Poverty_Line__c +  Total_Below_National_Poverty_Line__c &gt; 100</errorConditionFormula>
        <errorMessage>Total National Poverty Line % can&apos;t exceed 100%</errorMessage>
    </validationRules>
</CustomObject>